--- a/SeleniumDemo/UITests/packages.config
+++ b/SeleniumDemo/UITests/packages.config
@@ -5,6 +5,7 @@
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="SpecFlow" version="3.0.199" targetFramework="net461" />
+  <package id="SpecFlow.MsTest" version="3.0.199" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
