--- a/SeleniumDemo/UITests/packages.config
+++ b/SeleniumDemo/UITests/packages.config
@@ -8,7 +8,8 @@
   <package id="SpecFlow.MsTest" version="3.0.199" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net461" />
 </packages>
