--- a/SeleniumDemo/UITests/packages.config
+++ b/SeleniumDemo/UITests/packages.config
@@ -4,8 +4,9 @@
   <package id="Gherkin" version="6.0.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
-  <package id="SpecFlow" version="3.0.199" targetFramework="net461" />
-  <package id="SpecFlow.MsTest" version="3.0.199" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="SpecFlow" version="2.4.1" targetFramework="net461" />
+  <package id="SpecFlow.MsTest" version="2.4.1" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
