--- a/SeleniumDemo/UITests/packages.config
+++ b/SeleniumDemo/UITests/packages.config
@@ -6,6 +6,7 @@
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="74.0.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.1" targetFramework="net461" />
   <package id="SpecFlow.MsTest" version="2.4.1" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
